force-app/main/default/objects/sugati__Custom_Button_URL__c/sugati__Custom_Button_URL__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Custom Button URL</label>
</CustomObject>