force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__ATOL__c.field-meta.xml
<CustomField>
    <fullName>sugati__ATOL__c</fullName>
    <label>ATOL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>