force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Client_Payments__c.field-meta.xml
<CustomField>
    <fullName>sugati__Client_Payments__c</fullName>
    <label>Client Payments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>