force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>sugati__Cover_Image__c</fullName>
    <label>Cover Image</label>
    <length>50</length>
    <type>Text</type>
</CustomField>