force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__External_Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>sugati__External_Booking_Form__c</fullName>
    <label>External Booking Form</label>
    <length>50</length>
    <type>Text</type>
</CustomField>