force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Final_Docs_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__Final_Docs_Category__c</fullName>
    <label>Final Docs Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>