force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Final_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__Final_Message__c</fullName>
    <label>Final Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>