force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Holiday_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>sugati__Holiday_Enquiry__c</fullName>
    <label>Holiday Enquiry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>