force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Itinerary_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__Itinerary_Category__c</fullName>
    <label>Itinerary Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>