force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Itinerary_Pdf__c.field-meta.xml
<CustomField>
    <fullName>sugati__Itinerary_Pdf__c</fullName>
    <label>Itinerary Pdf</label>
    <length>50</length>
    <type>Text</type>
</CustomField>