force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Manage_Tasks__c.field-meta.xml
<CustomField>
    <fullName>sugati__Manage_Tasks__c</fullName>
    <label>Manage Tasks</label>
    <length>50</length>
    <type>Text</type>
</CustomField>