force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>sugati__Questionnaire__c</fullName>
    <label>Questionnaire</label>
    <length>50</length>
    <type>Text</type>
</CustomField>