force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Save_as_PDF_Documents__c.field-meta.xml
<CustomField>
    <fullName>sugati__Save_as_PDF_Documents__c</fullName>
    <label>Save as PDF Documents</label>
    <type>TextArea</type>
</CustomField>