force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Send_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__Send_Email__c</fullName>
    <label>Send Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>