force-app/main/default/objects/sugati__Custom_Button_URL__c/fields/sugati__Supplier_Payments__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier_Payments__c</fullName>
    <label>Supplier Payments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>